# hacs-groq

./: .gitignore  Makefile  README.md  hacs.json  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  validate.yml
custom_components/groq/: __init__.py  config_flow.py  const.py  conversation.py  helpers.py  manifest.json  strings.json  stt.py  tts.py  voluptuous_to_jsonschema.py
custom_components/groq/translations/: en.json  ja.json  zh-Hans.json  zh-Hant.json
