[project]
name = "hacs-groq"
version = "1.0.0"
description = "Groq AI Integration for Home Assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "hannoeru", email = "me@hanlee.co" }
]
requires-python = ">=3.13"
dependencies = [
    "groq==0.11.0",
]

[project.urls]
Homepage = "https://github.com/hannoeru/hacs-groq"
Repository = "https://github.com/hannoeru/hacs-groq"
Issues = "https://github.com/hannoeru/hacs-groq/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/groq"]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0915", # too many statements
    "TRY003",  # long exception message
    "ISC001",  # implicit string concatenation (conflicts with formatter)
    "TC001",   # move application imports into type-checking block
    "TC002",   # move third-party imports into type-checking block
    "TC003",   # move standard library imports into type-checking block
    "ARG001",  # unused function argument (common in HA setup functions)
    "ARG002",  # unused method argument (common in HA entity methods)
    "SIM102",  # use single if statement (sometimes nested is clearer)
    "DTZ005",  # datetime without timezone (HA handles this)
    "RET505",  # unnecessary else after return (sometimes clearer with else)
    "TRY300",  # consider moving to else block (sometimes clearer as-is)
    "RUF012",  # mutable class attributes (common in HA entities)
]

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Allow unused imports and module-level imports
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG",     # Allow unused arguments in tests
    "PLR2004", # Allow magic values in tests
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["custom_components"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "groq.*",
    "homeassistant.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
